--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,10 +1,11 @@
-#ad {
-  display: none;
-}
-
-#customOverlay {
+.vjs-overlay {
   position: absolute;
-  top: 50%; /* 화면 상단 중앙으로 이동 */
-  left: 50%; /* 화면 중앙으로 이동 */
-  transform: translate(-50%, -50%); /* 가운데 정렬 */
+  top: 10px;
+  right: 10px;
+  font-size: 8px;
+  font-weight: bold;
+  color: black;
+  background-color: rgba(169, 169, 169, 0.6);
+  padding: 10px;
+  border-radius: 10px;
 }
