--- a/static/css/index.css
+++ b/static/css/index.css
@@ -9,3 +9,8 @@
   padding: 10px;
   border-radius: 10px;
 }
+
+.vjs-overlay:hover {
+  background-color: rgba(179, 179, 179, 0.8);
+  font-size: 10px;
+}
