--- a/static/css/index.css
+++ b/static/css/index.css
@@ -22,3 +22,18 @@ body {
   background-color: rgba(179, 179, 179, 0.8);
   font-size: 10px;
 }
+
+#ad {
+  height: 100%;
+  color: black;
+  background-color: gainsboro;
+  border-radius: 10px;
+}
+
+/* 16:9 비율을 유지하기 위한 높이 설정 */
+#player {
+  height: 540px;
+}
+
+#toggleBtn:hover {
+}
