--- a/static/css/index.css
+++ b/static/css/index.css
@@ -11,19 +11,19 @@ body {
 
 .vjs-overlay {
   position: absolute;
-  top: 10px;
+  top: 1%;
   right: 10px;
-  font-size: 8px;
+  font-size: 12px;
   font-weight: bold;
   color: black;
   background-color: rgba(169, 169, 169, 0.6);
   padding: 10px;
-  border-radius: 10px;
+  border-radius: 20px;
 }
 
 .vjs-overlay:hover {
   background-color: rgba(179, 179, 179, 0.8);
-  font-size: 10px;
+  font-size: 13px;
 }
 
 .nav-link {
