--- a/static/css/index.css
+++ b/static/css/index.css
@@ -84,12 +84,41 @@ button {
   height: 720px; */
 }
 
-#wrap {
-  min-width: 1340px;
+.adListHeader {
+  /* padding-bottom: 2px; */
+  border-bottom: 1px solid black;
+  margin-bottom: 5px;
+  font-size: 18px;
+  font-weight: bold;
 }
 
-#searchImage {
-  margin-left: 10px;
+.adListItem {
+  margin-bottom: 5px;
+}
+
+.adListText {
+  font-size: 12px;
+}
+
+.adListImageDiv {
+  cursor: pointer;
+  margin: 3px 0;
+  border-radius: 15px;
+  overflow: hidden;
+  width: 100%;
+}
+
+.adListImage {
+  width: 100%;
+  transition: all 0.5s ease-out;
+}
+
+.adListImage:hover {
+  transform: scale(1.1);
+}
+
+#wrap {
+  min-width: 1340px;
 }
 
 #header {
@@ -101,11 +130,8 @@ button {
   padding-right: 60px;
 }
 
-#ad {
-  height: 100%;
-  color: black;
-  background-color: rgba(180, 180, 180, 0.8);
-  border-radius: 10px;
+#searchImage {
+  margin-left: 10px;
 }
 
 /* 16:9 비율을 유지하기 위한 높이 설정 */
@@ -114,9 +140,44 @@ button {
   height: 685.125px;
 }
 
+#ad {
+  height: 100%;
+  color: black;
+  background-color: rgba(180, 180, 180, 0.8);
+  border-radius: 10px;
+  font-family: "NotoKR-Medium Medium";
+  overflow: scroll;
+}
+
+#ad::-webkit-scrollbar {
+  display: none;
+}
+
+#toggleDiv {
+  border-bottom: 1px solid;
+  margin-bottom: 3px;
+}
+
+#adTitle {
+  font-weight: bold;
+  padding-right: 67px;
+  margin-top: 30px;
+  font-size: 24px;
+  display: inline;
+}
+
 #toggleBtn:after {
+  display: inline;
   font-size: 20px;
   content: "\00d7";
+}
+
+#adTitle-sub {
+  font-size: 13px;
+}
+
+#adList {
+  padding-top: 10px;
 }
 
 #vodInfo {
