--- a/static/css/index.css
+++ b/static/css/index.css
@@ -20,19 +20,19 @@ button {
 
 .vjs-overlay {
   position: absolute;
-  top: 1%;
-  right: 10px;
-  font-size: 12px;
+  top: 2%;
+  right: 1.5%;
+  font-size: 17px;
   font-weight: bold;
   color: black;
-  background-color: rgba(169, 169, 169, 0.6);
+  background-color: rgba(255, 255, 255, 0.6);
   padding: 10px;
   border-radius: 20px;
+  padding: 13px;
 }
 
 .vjs-overlay:hover {
-  background-color: rgba(179, 179, 179, 0.8);
-  font-size: 13px;
+  background-color: rgba(255, 255, 255, 0.8);
 }
 
 .nav-link {
@@ -138,6 +138,11 @@ button {
 #player {
   padding-top: 10px;
   height: 685.125px;
+}
+
+#tagimg {
+  width: 23px;
+  height: 23px;
 }
 
 #ad {
